--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "devDependencies": {
     "assert": "latest",
     "firebase-import": "latest",
-    "google-spreadsheet": "latest",
+    "google-spreadsheet": "^2.0.7",
     "ldapjs": "latest",
     "minimist": "latest",
-    "nodeunit": "latest",
+    "nodeunit": "^0.11.3",
     "q": "latest",
-    "request-json": "latest",
+    "request-json": "^0.6.4",
     "wget": "0.0.1"
   },
   "scripts": {
@@ -33,12 +33,10 @@
     "blocks-sync": "wget http://drupal.lib.virginia.edu/blocks?_format=json -O blocks.json; node filter-blocks.js > filtered-blocks.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /blocks --json filtered-blocks.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "pages-sync": "./getFeeds.sh; wget http://drupal.lib.virginia.edu/pages?_format=json -O pages.json; node filter-pages.js > filtered-pages.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /pages --json filtered-pages.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "exhibit-pages-sync": "wget https://drupal.lib.virginia.edu/rest/major-exhibit-pages?_format=json -O exhibit-pages.json; node filter-exhibit-pages.js > filtered-exhibit-pages.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /exhibit-pages --json filtered-exhibit-pages.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
-
     "people-sync": "wget http://drupal.lib.virginia.edu/people?_format=json -O people.json; node filter-people.js > filtered-people.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /people --json filtered-people.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "areas-sync": "wget http://drupal.lib.virginia.edu/areas?_format=json -O areas.json; node filter-areas.js > filtered-areas.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /areas --json filtered-areas.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "teams-sync": "wget http://drupal.lib.virginia.edu/teams?_format=json -O teams.json; node filter-teams.js > filtered-teams.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /teams --json filtered-teams.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "directory-sync": "npm run people-sync; npm run areas-sync; npm run teams-sync;",
-
     "staff-aggregate-feeds": "node getSocialFeeds.js > dist/feeds/staffSocial.xml",
     "staff-aggregate-feeds--publish": "rsync -avh -e 'ssh -i $HOME/.ssh/id_rsa' dist/feeds/ static01.lib.virginia.edu:/lib_content47/static/feeds"
   },
@@ -54,11 +52,11 @@
     "imagemin-jpegtran": "latest",
     "imagemin-pngquant": "latest",
     "imagemin-webp": "latest",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "promised-ldap": "^0.3.0",
     "rename": "^1.0.4",
-    "request": "latest",
+    "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "rss": "latest",
     "social-aggregate": "git://github.com/uvalib/social-aggregate.git",
