--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "wget": "0.0.1"
   },
   "scripts": {
-    "get-counts": "NOW=$(date +\"%Y-%m-%d\");ssh -i /home/teamcity/build-deploy-scripts/keys/teamcity_deploy -l teamcity_deploy suma-production-private.internal.lib.virginia.edu \"/usr/bin/php74 -e -r 'parse_str(\\\"edate=$NOW&etime=&id=1&sdate=2020-04-03&stime=\\\", \\$_GET); include \\\"/var/www/html/suma/analysis/reports/lib/php/rawDataResults.php\\\";'\" > counts.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /browncounts --json counts.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "home-component-build": "cd bower_components/uvalib-page/ && ../../node_modules/vulcanize/bin/vulcanize --out-html uvalib-homepage.vulcanized.html uvalib-homepage.html --strip-comments",
     "home-component-sync": "rsync -avh bower_components/ static01.lib.virginia.edu:/lib_content47/static/bower_components",
     "old-files-sync": "wget -qO- https://drupal.lib.virginia.edu/feeds/files | node old-filter-files.js ",
@@ -32,6 +31,10 @@
     "redirects-sync": "wget https://drupal.lib.virginia.edu/rest/redirects?_format=json -O redirects.json; node filter-redirects.js > filtered-redirects.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /redirects --json filtered-redirects.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "mediaobject-sync": "wget http://drupal.lib.virginia.edu/mediaobjects?_format=json -O mediaobjects.json; node filter-mediaobjects.js > filtered-mediaobjects.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /mediaobjects --json filtered-mediaobjects.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "libraries-sync": "wget http://drupal.lib.virginia.edu/libs?_format=json -O libraries.json; wget http://drupal.lib.virginia.edu/taxonomy/place-types?_format=json -O placeTypes.json; node filter-libraries.js > filtered-libraries.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /libraries --json filtered-libraries.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
+
+    "schemaorg-sync": "export firebasekey=\"/home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json\"; wget http://drupal.lib.virginia.edu/libs?_format=json -O libraries.json --no-check-certificate; wget http://drupal.lib.virginia.edu/taxonomy/place-types?_format=json -O placeTypes.json --no-check-certificate; node make-schemaorg-spaces.js",
+    "get-counts": "NOW=$(date +\"%Y-%m-%d\");ssh -i /home/teamcity/build-deploy-scripts/keys/teamcity_deploy -l teamcity_deploy suma-production-private.internal.lib.virginia.edu \"/usr/bin/php74 -e -r 'parse_str(\\\"edate=$NOW&etime=&id=1&sdate=2020-04-03&stime=\\\", \\$_GET); include \\\"/var/www/html/suma/analysis/reports/lib/php/rawDataResults.php\\\";'\" > counts.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /browncounts --json counts.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
+
     "services-sync": "wget http://drupal.lib.virginia.edu/services?_format=json -O services.json; node filter-services.js > filtered-services.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /services --json filtered-services.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "forms-sync": "wget https://drupal.lib.virginia.edu/pages?_format=json -O pages.json; node filter-forms.js > filtered-forms.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /forms --json filtered-forms.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "destinations-sync": "wget http://drupal.lib.virginia.edu/destinations?_format=json -O destinations.json; node filter-destinations.js > filtered-destinations.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /destinations --json filtered-destinations.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
@@ -59,6 +62,7 @@
     "imagemin-webp": "latest",
     "lodash": "^4.17.15",
     "moment": "^2.22.2",
+    "mustache": "^4.0.1",
     "node-fetch": "^2.6.0",
     "promised-ldap": "^0.3.0",
     "rename": "^1.0.4",
