update firebase admin

--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
     "@google-cloud/storage": "^1.1.0",
     "bower": "latest",
     "cheerio": "latest",
+    "digest-fetch": "^1.1.5",
     "fbgraph": "latest",
     "firebase": "latest",
-    "firebase-admin": "latest",
+    "firebase-admin": "^9.2.0",
     "imagemagick": "latest",
     "imagemin": "latest",
     "imagemin-jpegtran": "latest",
