--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "imagemin-pngquant": "latest",
     "imagemin-webp": "latest",
     "lodash": "^4.17.15",
+    "luxon": "^1.25.0",
     "moment": "^2.27.0",
     "mustache": "^4.0.1",
     "node-fetch": "^2.6.0",
