--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "blocks-sync": "wget http://drupal.lib.virginia.edu/blocks?_format=json -O blocks.json --no-check-certificate; node filter-blocks.js > filtered-blocks.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /blocks --json filtered-blocks.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "pages-sync": "./getFeeds.sh; wget http://drupal.lib.virginia.edu/pages?_format=json -O pages.json --no-check-certificate; node filter-pages.js > filtered-pages.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /pages --json filtered-pages.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "exhibit-pages-sync": "wget https://drupal.lib.virginia.edu/rest/major-exhibit-pages?_format=json -O exhibit-pages.json --no-check-certificate; node filter-exhibit-pages.js > filtered-exhibit-pages.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /exhibit-pages --json filtered-exhibit-pages.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
-    "people-sync": "wget http://drupal.lib.virginia.edu/people?_format=json -O people.json --no-check-certificate; node filter-people.js > filtered-people.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /people --json filtered-people.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
+    "people-sync": "wget http://drupal.lib.virginia.edu/people?_format=json -O people.json --no-check-certificate && node filter-people.js > filtered-people.json && npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /people --json filtered-people.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "areas-sync": "wget http://drupal.lib.virginia.edu/areas?_format=json -O areas.json --no-check-certificate; node filter-areas.js > filtered-areas.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /areas --json filtered-areas.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "teams-sync": "wget http://drupal.lib.virginia.edu/teams?_format=json -O teams.json --no-check-certificate; node filter-teams.js > filtered-teams.json; npx firebase-import --database_url https://uvalib-api.firebaseio.com --path /teams --json filtered-teams.json --force --service_account /home/teamcity/build-deploy-scripts/json-web-tokens/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "directory-sync": "npm run people-sync; npm run areas-sync; npm run teams-sync;",
@@ -64,15 +64,15 @@
     "imagemin-pngquant": "latest",
     "imagemin-webp": "latest",
     "jsdom": "^16.4.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "luxon": "^1.25.0",
     "moment": "^2.27.0",
     "mustache": "^4.0.1",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.6",
     "promised-ldap": "^0.3.0",
     "rename": "^1.0.4",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2",
+    "request-promise": "^4.2.6",
     "rss": "latest",
     "social-aggregate": "git://github.com/uvalib/social-aggregate.git",
     "striptags": "^3.1.1",
