--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.6",
     "rss": "latest",
-    "social-aggregate": "git://github.com/uvalib/social-aggregate.git",
+    "social-aggregate": "https://github.com/uvalib/social-aggregate.git",
     "striptags": "^3.1.1",
     "vulcanize": "^1.15.4"
   }
